fix text colors for links and italics in dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6444,3 +6444,11 @@ sell-nft-modal {
 .ql-editor .mention {
   color: var(--link);
 }
+
+.ql-editor a {
+  color: var(--link);
+}
+
+.ql-editor em {
+  color: var(--text-secondary);
+}
